# revCU

./: README.md  pyproject.toml  requirements.txt  time-table.csv
.github/workflows/: create-diagram.yml
Bot/src/: script.py
revCU/: main.py
revCU/revCU/: spider.py
revCU/revCU/models/: course.py  marks.py
src/: main.py  script.py  spider.py  temp.py  timetable.py
src/models/: __init__.py  course.py  marks.py
src/revCU/: __init__.py  spider.py
src/revCU/models/: course.py  marks.py
